# example_origin_ros

./: .gitignore  LICENSE  README.md  getting_started_with_the_robot.md
.github/workflows/: make-public.yml
autonomy_msgs/msg/: Path.msg  SystemStatus.msg
autonomy_msgs/srv/: SetCoordinateSystem.srv  SetState.srv
behavior_examples/: readme.md  setup.py
behavior_examples/behavior_examples/: set_behavior.py  set_behavior_base.py
complete_coverage_planner_msgs/: CMakeLists.txt  README.md  package.xml
complete_coverage_planner_msgs/action/: ComputePath.action
complete_coverage_planner_msgs/msg/: Area.msg  AreaStamped.msg  InfillPolicy.msg
complete_coverage_planner_msgs/srv/: SetArea.srv
information_examples/: package.xml  readme.md  setup.cfg  setup.py
information_examples/information_examples/: set_aruco.py
knowledge_base_msgs/: CMakeLists.txt  package.xml
knowledge_base_msgs/msg/: Behavior.msg  Constraint.msg  InitPose.msg  Job.msg  ModesOfOperation.msg  Policy.msg  ResourceType.msg  Result.msg  Task.msg  TypedPolygon.msg
knowledge_base_msgs/srv/: DeletePath.srv  DeleteResource.srv  ExecuteJob.srv  GetArucoPose.srv  GetCostmap.srv  GetResource.srv  GetRobotCoordInfo.srv  GetRobotPose.srv  GetTypedPolygons.srv  ListJobs.srv  ListPaths.srv  ListResource.srv  ListTypedPolygons.srv  PublishLocalizationMap.srv  ReportSystemState.srv  SaveMap.srv  SaveTypedPolygon.srv  SetAndExecuteBehaviors.srv  SetModeOfOperation.srv  SetResource.srv  SetRobotCoordInfo.srv  StopJob.srv  UnexecuteJob.srv
navigation_examples/: readme.md  setup.cfg  setup.py
navigation_examples/navigation_examples/: get_2dpose.py  get_velocity.py  set_velocity.py
origin_msgs/: package.xml
origin_msgs/msg/: ControlMode.msg  GNSSStatus.msg
perception_examples/: readme.md  setup.cfg
perception_examples/perception_examples/: get_closest.py
src/: readme.md
src/autonomy_msgs/: CMakeLists.txt  README.md  package.xml
src/autonomy_msgs/msg/: CoordinateSystemInfo.msg  GridMap2D.msg  Polygon.msg
src/autonomy_msgs/srv/: GetState.srv  Trigger.srv
src/behavior_examples/: package.xml  readme.md  setup.cfg
src/behavior_examples/behavior_examples/: set_behavior.py
src/knowledge_base_msgs/msg/: GlobalCostmap.msg  PathId.msg  Policy.msg  TypedPolygon.msg
src/knowledge_base_msgs/srv/: DeleteMap.srv  DeleteTypedPolygon.srv  GetActiveMapID.srv  GetMap.srv  GetNextBehavior.srv  GetPath.srv  GetTypedPolygon.srv  ListMaps.srv  ListTypedPolygons.srv  ReportBehaviorResult.srv  SavePath.srv  SetInitPose.srv  StartJob.srv  UpdateMap.srv  UpdatePath.srv  UpdateResource.srv
src/navigation_examples/: package.xml  readme.md
src/navigation_examples/navigation_examples/: get_velocity.py  set_velocity.py  set_velocity_new.py
src/origin_msgs/: CMakeLists.txt
src/origin_msgs/msg/: BatteryInfo.msg  CollisionAvoidanceMode.msg  InitialHeading.msg  LongitudalVelocityLimits.msg  NetworkTelemetry.msg
src/origin_msgs/srv/: EnterLowPowerMode.srv  ReturnControlMode.srv  SetControlMode.srv
src/perception_examples/: package.xml  setup.py
src/perception_examples/perception_examples/: get_closest.py
